--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,18 @@
 /*
     
-TemplateMo 557 Grad School
-
-https://templatemo.com/tm-557-grad-school
+Premium Towers International School Minna Styles
 
 */
 
 
 @import url(fontawesome.css);
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900");
+:root {
+  --main-bg-color: rgba(250, 250, 250, 0.102);
+  
+}
+
+
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -45,7 +49,7 @@ p {
 .section-heading h2:before {
     width: 1px;
     height: 100px;
-    background-color: rgba(250,250,250,0.1);
+    background-color: var(--main-bg-color);
     position: absolute;
     top: -102px;
     content: '';
@@ -180,7 +184,7 @@ a.menu-link { display: none; }
 }
 
 .main-header .logo a {
-    font-size: 36px;
+    font-size: 24px;
     text-transform: uppercase;
     font-weight: 800;
     color: #fff;
@@ -1551,11 +1555,6 @@ footer p a:hover {
     color: #f5a425;
 }
 
-/* Back-to-top */
-
-
-
-
 
 @media screen and (max-width: 992px) {
   .features { background-color: #0c1228; }
@@ -1601,3 +1600,42 @@ footer p a:hover {
     letter-spacing: 0.25px;
   }
 }
+
+/*Back-to-top */
+#myBtn {
+  display: none; 
+  position: fixed; 
+  bottom: 20px; 
+  right: 30px; 
+  z-index: 9999; 
+  border: none; 
+  outline: none; 
+  background-color: #FC3;
+  color: white; 
+  cursor: pointer; 
+  padding: 15px; 
+  border-radius: 50%; 
+  font-size: 18px; 
+  opacity: 0.6; 
+}
+
+#myBtn:hover {
+  opacity: 1; 
+}
+
+.lying-logo-top {
+    width: 250px; 
+    height: 77px;
+    margin-left: 45%; 
+}
+
+
+
+.lying-logo {
+  position: fixed;
+  bottom: 61%;
+  left: 30px;
+  transform: translateX(-50%) rotate(-90deg);
+  width: 250px; 
+  height: 77px;
+  z-index: 9999; 
